# dopehouse-openmic

./: .dockerignore  .env.example  404.html  CNAME  Dockerfile  LICENSE  README.md  download.html  index.html  pyproject.toml  run_dopehouse_http.bat  run_dopehouse_stdio.bat
.github/workflows/: docker.yml
core/: __init__.py  client.py  config.py  exceptions.py  oauth.py  server.py  types.py  utils.py
prompts/: __init__.py
scripts/: docker-build.sh
tools/: __init__.py  audio_tools.py  info_tools.py  lyrics_tools.py  media_tools.py  persona_tools.py  style_tools.py  task_tools.py
