[project]
name = "dopehouse-openmic"
version = "1.0.0"
description = "DOPEHOUSE OPENMIC - AI Music Creation Platform. Created by Jacob Daniel Powell."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
authors = [
    { name = "Jacob Daniel Powell", email = "jacob@dopehouseopenmic.com" }
]
maintainers = [
    { name = "Jacob Daniel Powell" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "suno",
    "ai",
    "music",
    "generation",
    "audio",
    "dopehouse",
    "openmic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "mypy>=1.10.0", "pre-commit>=3.7.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "respx>=0.21.0"]
release = ["build>=1.2.0", "twine>=5.0.0"]
all = ["dopehouse-openmic[dev,test,release]"]

[project.scripts]
dopehouse-openmic = "main:main"

[project.urls]
Homepage = "https://dopehouseopenmic.com"
Documentation = "https://dopehouseopenmic.com/docs"
Repository = "https://github.com/jacobdpowell/dopehouse-openmic"
Issues = "https://github.com/jacobdpowell/dopehouse-openmic/issues"

[build-system]
requires = ["hatchling>=1.21.0,<1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "tools", "prompts", "main.py"]

[tool.hatch.build.targets.sdist]
include = ["core/", "tools/", "prompts/", "tests/", "main.py", "README.md", "LICENSE", "CHANGELOG.md", ".env.example"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = ["integration: marks tests as integration tests (deselect with '-m \"not integration\"')", "slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["core", "tools"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError", "if TYPE_CHECKING:"]
